deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventix
  labels:
    app: eventix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventix
  template:
    metadata:
      labels:
        app: eventix
    spec:
      volumes:
        - name: app-public
          emptyDir: {}

        - name: nginx-config
          configMap:
            name: eventix-nginx

      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 3200
          volumeMounts:
            - name: app-public
              mountPath: /var/www/public
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20

        - name: app
          image: rdzpedraos/eventix:1.0
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - cp -a /var/www/public/. /mnt/public/ && exec php-fpm -F
          ports:
            - name: fpm
              containerPort: 9000
          volumeMounts:
            - name: app-public
              mountPath: /mnt/public
          readinessProbe:
            tcpSocket:
              port: fpm
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: fpm
            initialDelaySeconds: 15
            periodSeconds: 20
