deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventix
spec:
  type: NodePort
  selector:
    app: eventix
  ports:
    - name: http
      port: 80
      targetPort: http
